--- a/Initial_XGB_2_Additional_Features_Paratmeter_Tuning_log.ipynb
+++ b/Initial_XGB_2_Additional_Features_Paratmeter_Tuning_log.ipynb
@@ -1751,6 +1751,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eXtreme Gradient Boosting regression...\n",
+      "Best Params:\n",
+      "([mean: -0.47214, std: 0.05179, params: {'seed': 123, 'max_depth': 3, 'min_child_weight': 1}, mean: -0.47299, std: 0.05331, params: {'seed': 123, 'max_depth': 3, 'min_child_weight': 3}, mean: -0.47230, std: 0.05253, params: {'seed': 123, 'max_depth': 3, 'min_child_weight': 5}, mean: -0.46684, std: 0.05389, params: {'seed': 123, 'max_depth': 5, 'min_child_weight': 1}, mean: -0.46613, std: 0.05281, params: {'seed': 123, 'max_depth': 5, 'min_child_weight': 3}, mean: -0.46621, std: 0.05294, params: {'seed': 123, 'max_depth': 5, 'min_child_weight': 5}, mean: -0.46736, std: 0.05326, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 1}, mean: -0.46617, std: 0.05314, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 3}, mean: -0.46581, std: 0.05331, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 5}, mean: -0.46745, std: 0.05239, params: {'seed': 123, 'max_depth': 9, 'min_child_weight': 1}, mean: -0.46716, std: 0.05221, params: {'seed': 123, 'max_depth': 9, 'min_child_weight': 3}, mean: -0.46736, std: 0.05343, params: {'seed': 123, 'max_depth': 9, 'min_child_weight': 5}], {'seed': 123, 'max_depth': 7, 'min_child_weight': 5})\n",
+      "Best CV Score:\n",
+      "0.465808281052\n",
+      "39.7650008202\n"
+     ]
+    }
+   ],
+   "source": [
+    "t0=time()\n",
+    "xgbreg = xgb.XGBRegressor(learning_rate=.1, n_estimators=150, max_depth=5, gamma=0, \\\n",
+    "                          min_child_weight=3, seed=123, reg_alpha=0,\\\n",
+    "                          subsample=.8, colsample_bytree=.8,nthread=-1,scale_pos_weight=1)\n",
+    "param_grid = {\n",
+    "       'max_depth': np.arange(3,10,2),\n",
+    "       'min_child_weight': np.arange(1,6,2),\n",
+    "        'seed':[123]#np.arange(20)\n",
+    "}\n",
+    "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5)\n",
+    "model.fit(X_train[predictors], y_train)\n",
+    "print('eXtreme Gradient Boosting regression...')\n",
+    "print('Best Params:')\n",
+    "print(model.grid_scores_, model.best_params_)\n",
+    "print('Best CV Score:')\n",
+    "print(-model.best_score_)\n",
+    "print((time()-t0)/60)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false,
@@ -1764,53 +1806,12 @@
     "                          min_child_weight=3, seed=123, reg_alpha=0,\\\n",
     "                          subsample=.8, colsample_bytree=.8,nthread=-1,scale_pos_weight=1)\n",
     "param_grid = {\n",
-    "       'max_depth': np.arange(3,10,2),\n",
-    "       'min_child_weight': np.arange(1,6,2),\n",
-    "        'seed':[123]#np.arange(20)\n",
-    "}\n",
-    "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=RMSLE)\n",
-    "model.fit(X_train[predictors], y_train)\n",
-    "print('eXtreme Gradient Boosting regression...')\n",
-    "print('Best Params:')\n",
-    "print(model.grid_scores_, model.best_params_)\n",
-    "print('Best CV Score:')\n",
-    "print(-model.best_score_)\n",
-    "print((time()-t0)/60)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "eXtreme Gradient Boosting regression...\n",
-      "Best Params:\n",
-      "([mean: -0.45922, std: 0.04754, params: {'seed': 123, 'max_depth': 6, 'min_child_weight': 2}, mean: -0.45838, std: 0.04668, params: {'seed': 123, 'max_depth': 6, 'min_child_weight': 3}, mean: -0.45936, std: 0.04719, params: {'seed': 123, 'max_depth': 6, 'min_child_weight': 4}, mean: -0.45957, std: 0.04813, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 2}, mean: -0.45867, std: 0.04793, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 3}, mean: -0.45855, std: 0.04784, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 4}, mean: -0.46029, std: 0.04869, params: {'seed': 123, 'max_depth': 8, 'min_child_weight': 2}, mean: -0.45933, std: 0.04830, params: {'seed': 123, 'max_depth': 8, 'min_child_weight': 3}, mean: -0.45938, std: 0.04774, params: {'seed': 123, 'max_depth': 8, 'min_child_weight': 4}], {'seed': 123, 'max_depth': 6, 'min_child_weight': 3})\n",
-      "Best CV Score:\n",
-      "0.45837768534\n",
-      "65.401110518\n"
-     ]
-    }
-   ],
-   "source": [
-    "t0=time()\n",
-    "xgbreg2 = xgb.XGBRegressor(learning_rate=.1, n_estimators=140, max_depth=5, gamma=0, \\\n",
-    "                          subsample=.8, colsample_bytree=.8,nthread=-1,scale_pos_weight=1)\n",
-    "param_grid = {\n",
     "       'max_depth': [6,7,8],\n",
-    "       'min_child_weight': [2,3,4],\n",
+    "       'min_child_weight': [6,7,8],\n",
     "        'seed':[123]#np.arange(20)\n",
     "}\n",
-    "model = GridSearchCV(estimator=xgbreg2, param_grid=param_grid, n_jobs=-1, cv=5, scoring=RMSLE)\n",
-    "model.fit(X_train, y_train)\n",
+    "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5)\n",
+    "model.fit(X_train[predictors], y_train)\n",
     "print('eXtreme Gradient Boosting regression...')\n",
     "print('Best Params:')\n",
     "print(model.grid_scores_, model.best_params_)\n",
@@ -1843,7 +1844,8 @@
    ],
    "source": [
     "t0=time()\n",
-    "xgbreg3 = xgb.XGBRegressor(learning_rate=.1, n_estimators=140, max_depth=5, gamma=0, \\\n",
+    "xgbreg = xgb.XGBRegressor(learning_rate=.1, n_estimators=150, max_depth=5, gamma=0, \\\n",
+    "                          min_child_weight=3, seed=123, reg_alpha=0,\\\n",
     "                          subsample=.8, colsample_bytree=.8,nthread=-1,scale_pos_weight=1)\n",
     "param_grid = {\n",
     "       'gamma' : [i/10.0 for i in np.arange(0,5)],\n",
@@ -1851,8 +1853,8 @@
     "       'min_child_weight': [3],\n",
     "        'seed':[123]#np.arange(20)\n",
     "}\n",
-    "model = GridSearchCV(estimator=xgbreg3, param_grid=param_grid, n_jobs=-1, cv=5, scoring=RMSLE)\n",
-    "model.fit(X_train, y_train)\n",
+    "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=mse)\n",
+    "model.fit(X_train[predictors], y_train)\n",
     "print('eXtreme Gradient Boosting regression...')\n",
     "print('Best Params:')\n",
     "print(model.grid_scores_, model.best_params_)\n",
@@ -1885,8 +1887,8 @@
    ],
    "source": [
     "t0=time()\n",
-    "xgbreg4 = xgb.XGBRegressor(learning_rate=.1, n_estimators=150, max_depth=6, gamma=0, \\\n",
-    "                          min_child_weight=3, seed=123, \\\n",
+    "xgbreg = xgb.XGBRegressor(learning_rate=.1, n_estimators=150, max_depth=5, gamma=0, \\\n",
+    "                          min_child_weight=3, seed=123, reg_alpha=0,\\\n",
     "                          subsample=.8, colsample_bytree=.8,nthread=-1,scale_pos_weight=1)\n",
     "param_grid = {\n",
     "    'subsample':[i/10.0 for i in np.arange(6,10)],\n",
@@ -1896,8 +1898,8 @@
     "       #'min_child_weight': [3],\n",
     "        #'seed':[123]#np.arange(20)\n",
     "}\n",
-    "model = GridSearchCV(estimator=xgbreg4, param_grid=param_grid, n_jobs=-1, cv=5, scoring=RMSLE)\n",
-    "model.fit(X_train, y_train)\n",
+    "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=mse)\n",
+    "model.fit(X_train[predictors], y_train)\n",
     "print('eXtreme Gradient Boosting regression...')\n",
     "print('Best Params:')\n",
     "print(model.grid_scores_, model.best_params_)\n",
@@ -1930,8 +1932,8 @@
    ],
    "source": [
     "t0=time()\n",
-    "xgbreg5 = xgb.XGBRegressor(learning_rate=.1, n_estimators=150, max_depth=6, gamma=0, \\\n",
-    "                          min_child_weight=3, seed=123, \\\n",
+    "xgbreg = xgb.XGBRegressor(learning_rate=.1, n_estimators=150, max_depth=5, gamma=0, \\\n",
+    "                          min_child_weight=3, seed=123, reg_alpha=0,\\\n",
     "                          subsample=.8, colsample_bytree=.8,nthread=-1,scale_pos_weight=1)\n",
     "param_grid = {\n",
     "    'subsample':[i/100.0 for i in np.arange(85,100,5)],\n",
@@ -1941,8 +1943,8 @@
     "       #'min_child_weight': [3],\n",
     "        #'seed':[123]#np.arange(20)\n",
     "}\n",
-    "model = GridSearchCV(estimator=xgbreg5, param_grid=param_grid, n_jobs=-1, cv=5, scoring=RMSLE)\n",
-    "model.fit(X_train, y_train)\n",
+    "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=mse)\n",
+    "model.fit(X_train[predictors], y_train)\n",
     "print('eXtreme Gradient Boosting regression...')\n",
     "print('Best Params:')\n",
     "print(model.grid_scores_, model.best_params_)\n",
@@ -1976,9 +1978,9 @@
    "source": [
     "#del xgbreg\n",
     "t0=time()\n",
-    "xgbreg6 = xgb.XGBRegressor(learning_rate=.1, n_estimators=150, max_depth=6, gamma=0, \\\n",
+    "xgbreg = xgb.XGBRegressor(learning_rate=.1, n_estimators=150, max_depth=5, gamma=0, \\\n",
     "                          min_child_weight=3, seed=123, reg_alpha=0,\\\n",
-    "                          subsample=.95, colsample_bytree=.95,nthread=-1,scale_pos_weight=1)\n",
+    "                          subsample=.8, colsample_bytree=.8,nthread=-1,scale_pos_weight=1)\n",
     "param_grid = {\n",
     "    'reg_alpha':[1e4,1e5,1e6,1e7]#[1e-5, 1e-2, .1, 1, 100]\n",
     "    #'subsample':[i/100.0 for i in np.arange(85,100,5)],\n",
@@ -1988,8 +1990,8 @@
     "       #'min_child_weight': [3],\n",
     "        #'seed':[123]#np.arange(20)\n",
     "}\n",
-    "model = GridSearchCV(estimator=xgbreg6, param_grid=param_grid, n_jobs=-1, cv=5, scoring=RMSLE)\n",
-    "model.fit(X_train, y_train)\n",
+    "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=mse)\n",
+    "model.fit(X_train[predictors], y_train)\n",
     "print('eXtreme Gradient Boosting regression...')\n",
     "print('Best Params:')\n",
     "print(model.grid_scores_, model.best_params_)\n",
@@ -2023,9 +2025,9 @@
    "source": [
     "#del xgbreg\n",
     "t0=time()\n",
-    "xgbreg6 = xgb.XGBRegressor(learning_rate=.1, n_estimators=150, max_depth=6, gamma=0, \\\n",
+    "xgbreg = xgb.XGBRegressor(learning_rate=.1, n_estimators=150, max_depth=5, gamma=0, \\\n",
     "                          min_child_weight=3, seed=123, reg_alpha=0,\\\n",
-    "                          subsample=.95, colsample_bytree=.95,nthread=-1,scale_pos_weight=1)\n",
+    "                          subsample=.8, colsample_bytree=.8,nthread=-1,scale_pos_weight=1)\n",
     "param_grid = {\n",
     "    'reg_alpha':[8e6,1e7, 1.5e7]#[1e-5, 1e-2, .1, 1, 100]\n",
     "    #'subsample':[i/100.0 for i in np.arange(85,100,5)],\n",
@@ -2035,8 +2037,8 @@
     "       #'min_child_weight': [3],\n",
     "        #'seed':[123]#np.arange(20)\n",
     "}\n",
-    "model = GridSearchCV(estimator=xgbreg6, param_grid=param_grid, n_jobs=-1, cv=5, scoring=RMSLE)\n",
-    "model.fit(X_train, y_train)\n",
+    "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=mse)\n",
+    "model.fit(X_train[predictors], y_train)\n",
     "print('eXtreme Gradient Boosting regression...')\n",
     "print('Best Params:')\n",
     "print(model.grid_scores_, model.best_params_)\n",
