--- a/Initial_XGB_2_Additional_Features_Paratmeter_Tuning_log.ipynb
+++ b/Initial_XGB_2_Additional_Features_Paratmeter_Tuning_log.ipynb
@@ -1751,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1764,10 +1764,10 @@
      "text": [
       "eXtreme Gradient Boosting regression...\n",
       "Best Params:\n",
-      "([mean: -0.47214, std: 0.05179, params: {'seed': 123, 'max_depth': 3, 'min_child_weight': 1}, mean: -0.47299, std: 0.05331, params: {'seed': 123, 'max_depth': 3, 'min_child_weight': 3}, mean: -0.47230, std: 0.05253, params: {'seed': 123, 'max_depth': 3, 'min_child_weight': 5}, mean: -0.46684, std: 0.05389, params: {'seed': 123, 'max_depth': 5, 'min_child_weight': 1}, mean: -0.46613, std: 0.05281, params: {'seed': 123, 'max_depth': 5, 'min_child_weight': 3}, mean: -0.46621, std: 0.05294, params: {'seed': 123, 'max_depth': 5, 'min_child_weight': 5}, mean: -0.46736, std: 0.05326, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 1}, mean: -0.46617, std: 0.05314, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 3}, mean: -0.46581, std: 0.05331, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 5}, mean: -0.46745, std: 0.05239, params: {'seed': 123, 'max_depth': 9, 'min_child_weight': 1}, mean: -0.46716, std: 0.05221, params: {'seed': 123, 'max_depth': 9, 'min_child_weight': 3}, mean: -0.46736, std: 0.05343, params: {'seed': 123, 'max_depth': 9, 'min_child_weight': 5}], {'seed': 123, 'max_depth': 7, 'min_child_weight': 5})\n",
+      "([mean: 0.39386, std: 0.07515, params: {'seed': 123, 'max_depth': 3, 'min_child_weight': 1}, mean: 0.39267, std: 0.07580, params: {'seed': 123, 'max_depth': 3, 'min_child_weight': 3}, mean: 0.39294, std: 0.07436, params: {'seed': 123, 'max_depth': 3, 'min_child_weight': 5}, mean: 0.39087, std: 0.07500, params: {'seed': 123, 'max_depth': 5, 'min_child_weight': 1}, mean: 0.39344, std: 0.07308, params: {'seed': 123, 'max_depth': 5, 'min_child_weight': 3}, mean: 0.39438, std: 0.07321, params: {'seed': 123, 'max_depth': 5, 'min_child_weight': 5}, mean: 0.37746, std: 0.07531, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 1}, mean: 0.38170, std: 0.07043, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 3}, mean: 0.38069, std: 0.07278, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 5}, mean: 0.36066, std: 0.06521, params: {'seed': 123, 'max_depth': 9, 'min_child_weight': 1}, mean: 0.35951, std: 0.07180, params: {'seed': 123, 'max_depth': 9, 'min_child_weight': 3}, mean: 0.36683, std: 0.07291, params: {'seed': 123, 'max_depth': 9, 'min_child_weight': 5}], {'seed': 123, 'max_depth': 5, 'min_child_weight': 5})\n",
       "Best CV Score:\n",
-      "0.465808281052\n",
-      "39.7650008202\n"
+      "-0.394375789533\n",
+      "140.27918365\n"
      ]
     }
    ],
@@ -1782,7 +1782,7 @@
     "        'seed':[123]#np.arange(20)\n",
     "}\n",
     "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5)\n",
-    "model.fit(X_train[predictors], y_train)\n",
+    "model.fit(X_train[predictors], np.log(y_train+1))\n",
     "print('eXtreme Gradient Boosting regression...')\n",
     "print('Best Params:')\n",
     "print(model.grid_scores_, model.best_params_)\n",
@@ -1793,25 +1793,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eXtreme Gradient Boosting regression...\n",
+      "Best Params:\n",
+      "([mean: 0.67681, std: 0.07317, params: {'seed': 123, 'max_depth': 6, 'min_child_weight': 6}, mean: 0.67419, std: 0.07210, params: {'seed': 123, 'max_depth': 6, 'min_child_weight': 7}, mean: 0.67487, std: 0.07059, params: {'seed': 123, 'max_depth': 6, 'min_child_weight': 8}, mean: 0.67482, std: 0.07229, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 6}, mean: 0.67525, std: 0.07083, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 7}, mean: 0.67247, std: 0.07228, params: {'seed': 123, 'max_depth': 7, 'min_child_weight': 8}, mean: 0.67018, std: 0.07308, params: {'seed': 123, 'max_depth': 8, 'min_child_weight': 6}, mean: 0.67044, std: 0.07669, params: {'seed': 123, 'max_depth': 8, 'min_child_weight': 7}, mean: 0.66945, std: 0.07770, params: {'seed': 123, 'max_depth': 8, 'min_child_weight': 8}], {'seed': 123, 'max_depth': 6, 'min_child_weight': 6})\n",
+      "Best CV Score:\n",
+      "-0.676807613581\n",
+      "23.5700802326\n"
+     ]
+    }
+   ],
    "source": [
     "t0=time()\n",
     "xgbreg = xgb.XGBRegressor(learning_rate=.1, n_estimators=150, max_depth=5, gamma=0, \\\n",
     "                          min_child_weight=3, seed=123, reg_alpha=0,\\\n",
     "                          subsample=.8, colsample_bytree=.8,nthread=-1,scale_pos_weight=1)\n",
     "param_grid = {\n",
-    "       'max_depth': [6,7,8],\n",
-    "       'min_child_weight': [6,7,8],\n",
+    "       'max_depth': [4,5,6],\n",
+    "       'min_child_weight': [4,5,6],\n",
     "        'seed':[123]#np.arange(20)\n",
     "}\n",
     "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5)\n",
-    "model.fit(X_train[predictors], y_train)\n",
+    "model.fit(X_train[predictors], np.log(y_train+1))\n",
     "print('eXtreme Gradient Boosting regression...')\n",
     "print('Best Params:')\n",
     "print(model.grid_scores_, model.best_params_)\n",
@@ -1899,7 +1912,7 @@
     "        #'seed':[123]#np.arange(20)\n",
     "}\n",
     "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=mse)\n",
-    "model.fit(X_train[predictors], y_train)\n",
+    "model.fit(X_train[predictors], np.log(y_train+1))\n",
     "print('eXtreme Gradient Boosting regression...')\n",
     "print('Best Params:')\n",
     "print(model.grid_scores_, model.best_params_)\n",
@@ -1944,7 +1957,7 @@
     "        #'seed':[123]#np.arange(20)\n",
     "}\n",
     "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=mse)\n",
-    "model.fit(X_train[predictors], y_train)\n",
+    "model.fit(X_train[predictors], np.log(y_train+1))\n",
     "print('eXtreme Gradient Boosting regression...')\n",
     "print('Best Params:')\n",
     "print(model.grid_scores_, model.best_params_)\n",
@@ -1991,7 +2004,7 @@
     "        #'seed':[123]#np.arange(20)\n",
     "}\n",
     "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=mse)\n",
-    "model.fit(X_train[predictors], y_train)\n",
+    "model.fit(X_train[predictors], np.log(y_train+1))\n",
     "print('eXtreme Gradient Boosting regression...')\n",
     "print('Best Params:')\n",
     "print(model.grid_scores_, model.best_params_)\n",
@@ -2038,7 +2051,7 @@
     "        #'seed':[123]#np.arange(20)\n",
     "}\n",
     "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=mse)\n",
-    "model.fit(X_train[predictors], y_train)\n",
+    "model.fit(X_train[predictors], np.log(y_train+1))\n",
     "print('eXtreme Gradient Boosting regression...')\n",
     "print('Best Params:')\n",
     "print(model.grid_scores_, model.best_params_)\n",
