--- a/Initial_XGB_2_Additional_Features_Paratmeter_Tuning_log.ipynb
+++ b/Initial_XGB_2_Additional_Features_Paratmeter_Tuning_log.ipynb
@@ -3373,7 +3373,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -3387,7 +3387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
