--- a/Stacking.ipynb
+++ b/Stacking.ipynb
@@ -27,6 +27,7 @@
     "from sklearn.cross_validation import KFold\n",
     "from sklearn.cross_validation import train_test_split\n",
     "import time\n",
+    "%matplotlib inline\n",
     "from sklearn import preprocessing\n",
     "from sklearn.preprocessing import Imputer\n",
     "from xgboost import XGBRegressor\n",
@@ -61,45 +62,54 @@
    },
    "outputs": [],
    "source": [
-    "def create_submission(prediction,score):\n",
+    "def create_submission(prediction,score,comment):\n",
     "    now = datetime.datetime.now()\n",
-    "    sub_file = 'submission_'+str(score)+'_'+str(now.strftime(\"%Y-%m-%d-%H-%M\"))+'.csv'\n",
+    "    sub_file = 'submission_'+str(score)+'_'+str(now.strftime(\"%Y-%m-%d-%H-%M\"))+comment+'.csv'\n",
     "    #sub_file = 'prediction_training.csv'\n",
     "    print ('Creating submission: ', sub_file)\n",
     "    pd.DataFrame({'id': id_test, 'price_doc': prediction}).to_csv(sub_file, index=False)\n",
     "\n",
     "# train need to be test when do test prediction\n",
     "def data_preprocess(X_train,X_test):\n",
-    "    imp = Imputer(missing_values=np.nan, strategy='median')\n",
-    "    imp.fit(pd.concat([X_train,X_test]))\n",
-    "    X_train = pd.DataFrame(imp.transform(X_train),columns=X_train.columns)\n",
-    "    X_test = pd.DataFrame(imp.transform(X_test),columns=X_test.columns)\n",
-    "\n",
-    "    imp = Imputer(missing_values=np.infty, strategy='median')\n",
-    "    imp.fit(pd.concat([X_train,X_test]))\n",
-    "    X_train = pd.DataFrame(imp.transform(X_train),columns=X_train.columns)\n",
-    "    X_test = pd.DataFrame(imp.transform(X_test),columns=X_test.columns)\n",
-    "    \n",
     "#     outlier_idx = [4,11,13,20,46,66,70,167,178,185,199, 224,261, 309,313,318, 349,412,423,440,454,477,478, 523,540, 581,588,595,654,688, 691, 774, 798, 875, 898,926,970,987,1027,1109, 1169,1182,1239, 1256,1298,1324,1353,1359,1405,1442,1447]\n",
     "#     train.drop(train.index[outlier_idx],inplace=True)\n",
-    "#     all_data = pd.concat((train.loc[:,'MSSubClass':'SaleCondition'],\n",
-    "#                           test.loc[:,'MSSubClass':'SaleCondition']))\n",
+    "    all_data = pd.concat((X_train,X_test))\n",
     "    \n",
-    "#     to_delete = ['Alley','FireplaceQu','PoolQC','Fence','MiscFeature']\n",
-    "#     all_data = all_data.drop(to_delete,axis=1)\n",
+    "    lowerClipCol = ['floor_from_top', 'roomsize', 'extra_area', 'age_at_sale']\n",
+    "    for c in lowerClipCol:\n",
+    "        all_data[[c]]=all_data[[c]].clip(lower=0)\n",
+    "    \n",
+    "# #     to_delete = ['Alley','FireplaceQu','PoolQC','Fence','MiscFeature']\n",
+    "# #     all_data = all_data.drop(to_delete,axis=1)\n",
     "\n",
-    "#     train[\"SalePrice\"] = np.log1p(train[\"SalePrice\"])\n",
+    "#     #train[\"SalePrice\"] = np.log1p(train[\"SalePrice\"])\n",
     "#     #log transform skewed numeric features\n",
-    "#     numeric_feats = all_data.dtypes[all_data.dtypes != \"object\"].index\n",
-    "#     skewed_feats = train[numeric_feats].apply(lambda x: skew(x.dropna())) #compute skewness\n",
-    "#     skewed_feats = skewed_feats[skewed_feats > 0.75]\n",
-    "#     skewed_feats = skewed_feats.index\n",
-    "#     all_data[skewed_feats] = np.log1p(all_data[skewed_feats])\n",
-    "#     all_data = pd.get_dummies(all_data)\n",
-    "#     all_data = all_data.fillna(all_data.mean())\n",
-    "#     X_train = all_data[:train.shape[0]]\n",
-    "#     X_test = all_data[train.shape[0]:]\n",
-    "#     y = train.SalePrice\n",
+    "    numeric_feats = all_data.dtypes[all_data.dtypes != \"object\"].index\n",
+    "    skewed_feats = X_train[numeric_feats].apply(lambda x: skew(x.dropna())) #compute skewness\n",
+    "    skewed_feats = skewed_feats[skewed_feats > 0.75]\n",
+    "    skewed_feats = skewed_feats.index\n",
+    "    all_data[skewed_feats] = np.log1p(all_data[skewed_feats])\n",
+    "    #all_data = pd.get_dummies(all_data)\n",
+    "    #all_data = all_data.fillna(all_data.median())\n",
+    "    \n",
+    "    all_data.replace([np.infty, -np.infty], np.nan)\n",
+    "    imp = Imputer(missing_values=np.nan, strategy='median')\n",
+    "    all_data=pd.DataFrame(imp.fit_transform(all_data), columns=all_data.columns)\n",
+    "    imp = Imputer(missing_values=np.infty, strategy='median')\n",
+    "    all_data=pd.DataFrame(imp.fit_transform(all_data), columns=all_data.columns)\n",
+    "\n",
+    "    X_train = all_data[:X_train.shape[0]]\n",
+    "    X_test = all_data[X_train.shape[0]:]\n",
+    "    \n",
+    "#     imp = Imputer(missing_values=np.nan, strategy='median')\n",
+    "#     imp.fit(all_data)\n",
+    "#     X_train = pd.DataFrame(imp.transform(X_train),columns=X_train.columns)\n",
+    "#     X_test = pd.DataFrame(imp.transform(X_test),columns=X_test.columns)\n",
+    "    \n",
+    "#     imp = Imputer(missing_values=np.infty, strategy='median')\n",
+    "#     imp.fit(pd.concat([X_train,X_test]))\n",
+    "#     X_train = pd.DataFrame(imp.transform(X_train),columns=X_train.columns)\n",
+    "#     X_test = pd.DataFrame(imp.transform(X_test),columns=X_test.columns)\n",
     "\n",
     "    return X_train,X_test\n"
    ]
@@ -170,9 +180,17 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda2/lib/python2.7/site-packages/scipy/stats/stats.py:926: RuntimeWarning: invalid value encountered in subtract\n",
+      "  a_zero_mean = a - np.expand_dims(np.mean(a, axis), axis)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -187,7 +205,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-45e2e66ee700>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mdata_preprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mensem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog1p\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0mcreate_submission\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpm1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-82672679c3dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mdata_preprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mensem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog1p\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0mcreate_submission\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpm1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"skewAdded\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m<ipython-input-3-76bedbbc956b>\u001b[0m in \u001b[0;36mfit_predict\u001b[0;34m(self, train, test, ytr)\u001b[0m\n\u001b[1;32m     18\u001b[0m                 \u001b[0my_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtrain_idx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m                 \u001b[0mX_holdout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtest_idx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m                 \u001b[0mreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m                 \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_holdout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m                 \u001b[0mS_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtest_idx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/home/ubuntu/anaconda2/lib/python2.7/site-packages/sklearn/ensemble/forest.pyc\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    324\u001b[0m                     \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrees\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    325\u001b[0m                     verbose=self.verbose, class_weight=self.class_weight)\n\u001b[0;32m--> 326\u001b[0;31m                 for i, t in enumerate(trees))\n\u001b[0m\u001b[1;32m    327\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    328\u001b[0m             \u001b[0;31m# Collect newly grown trees\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/home/ubuntu/anaconda2/lib/python2.7/site-packages/sklearn/externals/joblib/parallel.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, iterable)\u001b[0m\n\u001b[1;32m    756\u001b[0m             \u001b[0;31m# was dispatched. In particular this covers the edge\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    757\u001b[0m             \u001b[0;31m# case of Parallel used with an exhausted iterator.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 758\u001b[0;31m             \u001b[0;32mwhile\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_one_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    759\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_iterating\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    760\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -245,14 +263,14 @@
     "#             n_estimators=500, max_depth=7,\n",
     "#             learning_rate=0.05, subsample=0.8, colsample_bytree=0.75\n",
     "#         ),\n",
-    "#         LassoCV(alphas = [1, 0.1, 0.001, 0.0005]),\n",
-    "#         KNeighborsRegressor(n_neighbors = 5),\n",
-    "#         KNeighborsRegressor(n_neighbors = 10),\n",
-    "#         KNeighborsRegressor(n_neighbors = 15),\n",
-    "#         KNeighborsRegressor(n_neighbors = 25),\n",
-    "#         LassoLarsCV(),\n",
-    "#         ElasticNet(),\n",
-    "#         SVR()\n",
+    "        LassoCV(alphas = [1, 0.1, 0.001, 0.0005]),\n",
+    "        KNeighborsRegressor(n_neighbors = 5),\n",
+    "        KNeighborsRegressor(n_neighbors = 10),\n",
+    "        KNeighborsRegressor(n_neighbors = 15),\n",
+    "        KNeighborsRegressor(n_neighbors = 25),\n",
+    "        LassoLarsCV(),\n",
+    "        ElasticNet(),\n",
+    "        SVR()\n",
     "    ]\n",
     "\n",
     "ensem = ensemble(\n",
@@ -264,16 +282,57 @@
     "X_train,X_test= data_preprocess(train,test)\n",
     "y_pred, score = ensem.fit_predict(X_train,X_test,np.log1p(y_train))\n",
     "\n",
-    "create_submission(np.expm1(y_pred),score)\n"
+    "create_submission(np.expm1(y_pred),score,\"skewAdded\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "81\n",
+      "9\n",
+      "33\n",
+      "1682\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "if(True):\n",
+    "    X_train = train\n",
+    "    X_test = test\n",
+    "    all_data = pd.concat((X_train,X_test))\n",
+    "    \n",
+    "    lowerClipCol = ['floor_from_top', 'roomsize', 'extra_area', 'age_at_sale']\n",
+    "    for c in lowerClipCol:\n",
+    "        print(sum(all_data[c]<0))\n",
+    "        #all_data[[c]]=all_data[[c]].clip(lower=0)\n",
+    "    \n",
+    "# #     to_delete = ['Alley','FireplaceQu','PoolQC','Fence','MiscFeature']\n",
+    "# #     all_data = all_data.drop(to_delete,axis=1)\n",
+    "\n",
+    "#     #train[\"SalePrice\"] = np.log1p(train[\"SalePrice\"])\n",
+    "#     #log transform skewed numeric features\n",
+    "    numeric_feats = all_data.dtypes[all_data.dtypes != \"object\"].index\n",
+    "    skewed_feats = X_train[numeric_feats].apply(lambda x: skew(x.dropna())) #compute skewness\n",
+    "    skewed_feats = skewed_feats[skewed_feats > 5]\n",
+    "    print(len(skewed_feats))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
