--- a/Stacking.ipynb
+++ b/Stacking.ipynb
@@ -230,39 +230,34 @@
     "\n",
     "# build a model library (can be improved)\n",
     "base_models = [\n",
-    "        RandomForestRegressor(max_depth=6, n_jobs=1, random_state=0,\n",
+    "        RandomForestRegressor(max_depth=6, n_jobs=1, random_state=123,\n",
     "            n_estimators=500, max_features=.95\n",
     "        ), #0.34513\n",
-    "#         RandomForestRegressor(\n",
-    "#             n_jobs=1, random_state=0,\n",
-    "#             n_estimators=500, max_features=20,\n",
-    "#             max_depth = 7\n",
-    "#         ),\n",
-    "#         ExtraTreesRegressor(\n",
-    "#             n_jobs=1, random_state=0, \n",
-    "#             n_estimators=500, max_features=15\n",
-    "#         ),\n",
-    "#         ExtraTreesRegressor(\n",
-    "#             n_jobs=1, random_state=0, \n",
-    "#           n_estimators=500, max_features=20\n",
-    "#         ),\n",
+    "        RandomForestRegressor(max_depth=5, n_jobs=1, random_state=123,\n",
+    "            n_estimators=500, max_features=.95\n",
+    "        ), #0.34513\n",
+    "        ExtraTreesRegressor(\n",
+    "            n_jobs=1, random_state=0, \n",
+    "            n_estimators=500, max_features=15\n",
+    "        ),\n",
+    "        ExtraTreesRegressor(\n",
+    "            n_jobs=1, random_state=0, \n",
+    "          n_estimators=500, max_features=20\n",
+    "        ),\n",
     "        GradientBoostingRegressor(learning_rate=0.02, n_estimators=500, min_samples_leaf=70, \n",
     "            min_samples_split=200, max_features='sqrt',max_depth=6,subsample=0.85,random_state=10\n",
     "            ), #LB 0.32465\n",
-    "#         GradientBoostingRegressor(\n",
-    "#             random_state=0, \n",
-    "#             n_estimators=500, max_features=15, max_depth=6,\n",
-    "#             learning_rate=0.05, subsample=0.8\n",
-    "#         ),\n",
+    "        GradientBoostingRegressor(\n",
+    "            random_state=0, \n",
+    "            n_estimators=500, max_features=15, max_depth=6,\n",
+    "            learning_rate=0.05, subsample=0.8\n",
+    "        ),\n",
     "        XGBRegressor(seed=5, learning_rate=.02, subsample=.95, max_depth=6, min_child_weight=3, \n",
     "            n_estimators=500, colsample_bytree=0.95\n",
+    "        ), #0.31625 \n",
+    "        XGBRegressor(seed=5, learning_rate=.02, subsample=.95, max_depth=6, min_child_weight=3, \n",
+    "            n_estimators=250, colsample_bytree=0.95\n",
     "        ), #0.31625\n",
-    " \n",
-    "#         XGBRegressor(\n",
-    "#             seed=0,\n",
-    "#             n_estimators=500, max_depth=7,\n",
-    "#             learning_rate=0.05, subsample=0.8, colsample_bytree=0.75\n",
-    "#         ),\n",
     "        LassoCV(alphas = [1, 0.1, 0.001, 0.0005]),\n",
     "        KNeighborsRegressor(n_neighbors = 5),\n",
     "        KNeighborsRegressor(n_neighbors = 10),\n",
