--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -13,9 +13,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "/home/ubuntu/anaconda2/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "/home/ubuntu/anaconda2/lib/python2.7/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
       "  DeprecationWarning)\n"
      ]
     }
@@ -2521,7 +2521,15 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train Regional_Mean_Price\n"
+     ]
+    }
+   ],
    "source": [
     "threshold = .02 #.01=1km\n",
     "def addRegionalMean(train):\n",
@@ -2529,8 +2537,12 @@
     "        indicator = train.apply(lambda x: np.sqrt((train['lat']-lat)**2+(train['lon']-lon)**2)<threshold)\n",
     "        return train[indicator][col].median()\n",
     "    train['Regional_Mean_Price'] = train.apply(lambda x: dist(x['lat'],x['lon'],threshold, 'price_doc'), axis=1)\n",
+    "print('train Regional_Mean_Price')\n",
     "addRegionalMean(train)\n",
-    "addRegionalMean(test)"
+    "pd.DataFrame(train['Regional_Mean_Price']).to_csv('./input/train_regional_mean_price.csv')\n",
+    "print('test Regional_Mean_Price')\n",
+    "addRegionalMean(test)\n",
+    "pd.DataFrame(test['Regional_Mean_Price']).to_csv('./input/test_regional_mean_price.csv')"
    ]
   },
   {
@@ -3006,7 +3018,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -3020,7 +3032,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
