--- a/ML/model/Stacking.ipynb
+++ b/ML/model/Stacking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -29,7 +29,7 @@
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.svm import SVR\n",
     "from scipy.stats import skew\n",
-    "from readData import readData\n",
+    "from readData import data_preprocess, readData\n",
     "\n",
     "def RMSLE_(y_val, y_val_pred):\n",
     "    return np.sqrt(np.mean((np.log(y_val+1)-np.log(y_val_pred+1))**2))\n",
@@ -282,7 +282,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
