--- a/ML/features/tmp.ipynb
+++ b/ML/features/tmp.ipynb
@@ -33,7 +33,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1204,10 +1206,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#delete_features = pd.read_table(\"../../cols_to_drop.txt\").iloc[1:62]\n",
+    "    \n",
+    "    #tmp=list(pd.read_table(\"../../cols_to_drop.txt\").iloc[1:62])\n",
+    "    #delete_features = list(set().union(delete_features,tmp))"
+   ]
   }
  ],
  "metadata": {
