--- a/ML/model/CV.ipynb
+++ b/ML/model/CV.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -29,6 +31,10 @@
     "from sklearn import preprocessing\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.cross_validation import train_test_split\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, ExtraTreesRegressor, GradientBoostingRegressor\n",
+    "\n",
+    "from readData import readData, data_preprocess\n",
     "\n",
     "# my own module\n",
     "from features import data_utils"
@@ -36,13 +42,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conbined_data: (36650, 702)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train = readData(isLog1p=True)\n",
+    "#X_train, X_test = data_preprocess(X_train, X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def CV(isLog1p=True):\n",
+    "def CV(train, y, model, test_size=.2, isLog1p=True):\n",
+    "    X_train, X_val, y_train, y_val=train_test_split(train, y, test_size=test_size, \n",
+    "                                                random_state=123)\n",
+    "\n",
+    "    model.fit(X_train, y_train)\n",
+    "    \n",
+    "    if (isLog1p):\n",
+    "        train_rmse = mean_squared_error(y_train, model.predict(X_train))\n",
+    "        val_rmse = mean_squared_error(y_val, model.predict(X_val))\n",
+    "    else:\n",
+    "        train_rmse = mean_squared_error(np.log1p(y_train), np.log1p(model.predict(X_train)))\n",
+    "        val_rmse = mean_squared_error(np.log1p(y_val), np.log1p(model.predict(X_val)))\n",
+    "    print 'train_rmse =', np.sqrt(train_rmse), ', val_rmse =', np.sqrt(val_rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-rmse:14.4029\ttest-rmse:14.4029\n",
+      "[50]\ttrain-rmse:1.15771\ttest-rmse:1.16089\n",
+      "[100]\ttrain-rmse:0.312754\ttest-rmse:0.334931\n",
+      "[150]\ttrain-rmse:0.287148\ttest-rmse:0.319795\n",
+      "[200]\ttrain-rmse:0.277235\ttest-rmse:0.31804\n",
+      "[250]\ttrain-rmse:0.269465\ttest-rmse:0.31755\n",
+      "[300]\ttrain-rmse:0.262086\ttest-rmse:0.317157\n",
+      "309\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgb_params = {\n",
+    "        'learning_rate': 0.05,\n",
+    "        'max_depth': 5,\n",
+    "        'subsample': 0.7,\n",
+    "        'colsample_bytree': 0.7,\n",
+    "        'objective': 'reg:linear',\n",
+    "        #'eval_metric': 'rmse',\n",
+    "        'min_child_weight': 1,\n",
+    "        'silent': 1,\n",
+    "        'seed':5\n",
+    "    }\n",
+    "\n",
+    "dtrain = xgb.DMatrix(X_train, y_train)\n",
+    "dtest = xgb.DMatrix(X_test)\n",
+    "\n",
+    "cv_output = xgb.cv(xgb_params, dtrain, num_boost_round=1000, early_stopping_rounds=40, nfold=5,\\\n",
+    "    verbose_eval=50, show_stdv=False)\n",
+    "cv_output[['train-rmse-mean', 'test-rmse-mean']].plot()\n",
+    "\n",
+    "print(len(cv_output)) #309\n",
+    "\n",
+    "xgb_params['n_estimators']=len(cv_output)\n",
+    "\n",
+    "model = XGBRegressor(**xgb_params)\n",
+    "\n",
+    "# model = XGBRegressor(seed=5, learning_rate=.05, subsample=.7, max_depth=5, #min_child_weight=3, \n",
+    "#             n_estimators=281, \n",
+    "#             colsample_bytree=0.7\n",
+    "#         )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_rmse = 0.261787007971 , val_rmse = 0.31980116091\n"
+     ]
+    }
+   ],
+   "source": [
+    "CV(X_train, y_train, model)\n",
+    "#not log1p, original train_rmse = 0.252746403304 , val_rmse = 0.320226748185\n",
+    "#log1p, orginal train_rmse = 0.257648786803 , val_rmse = 0.320517933831, \n",
+    "\n",
+    "#log1p, my deleted train_rmse = 0.257648786803 , val_rmse = 0.320517933831, \n",
+    "#log1p, my deleted added train_rmse = 0.257648786803 , val_rmse = 0.320517933831\n",
+    "\n",
+    "#log1p seed=5, learning_rate=.05, subsample=.7, max_depth=5, #min_child_weight=3, n_estimators=281, \n",
+    "#colsample_bytree=0.7 train_rmse = 0.266050150088 , val_rmse = 0.319972286248\n",
+    "\n",
+    "#jun24 data log1p seed=5, learning_rate=.05, subsample=.7, max_depth=5, #min_child_weight=3, n_estimators=281, \n",
+    "#colsample_bytree=0.7 train_rmse = 0.261787007971 , val_rmse = 0.31980116091"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conbined_data: (36650, 702)\n",
+      "submit test size: 0.264316268801\n",
+      "validate size: 0.359279752415\n",
+      "('X_train_all shape is', (28988, 702))\n",
+      "('X_train shape is', (21326, 702))\n",
+      "('y_train shape is', (21326,))\n",
+      "('X_val shape is', (7662, 702))\n",
+      "('y_val shape is', (7662,))\n",
+      "('X_test shape is', (7662, 702))\n",
+      "[0]\teval-rmse:14.401\n",
+      "Will train until eval-rmse hasn't improved in 40 rounds.\n",
+      "[10]\teval-rmse:8.62748\n",
+      "[20]\teval-rmse:5.17376\n",
+      "[30]\teval-rmse:3.11093\n",
+      "[40]\teval-rmse:1.88354\n",
+      "[50]\teval-rmse:1.1597\n",
+      "[60]\teval-rmse:0.744146\n",
+      "[70]\teval-rmse:0.517844\n",
+      "[80]\teval-rmse:0.406038\n",
+      "[90]\teval-rmse:0.356851\n",
+      "[100]\teval-rmse:0.336461\n",
+      "[110]\teval-rmse:0.328658\n",
+      "[120]\teval-rmse:0.325175\n",
+      "[130]\teval-rmse:0.323587\n",
+      "[140]\teval-rmse:0.322657\n",
+      "[150]\teval-rmse:0.322152\n",
+      "[160]\teval-rmse:0.321778\n",
+      "[170]\teval-rmse:0.32146\n",
+      "[180]\teval-rmse:0.321216\n",
+      "[190]\teval-rmse:0.320811\n",
+      "[200]\teval-rmse:0.320791\n",
+      "[210]\teval-rmse:0.320634\n",
+      "[220]\teval-rmse:0.320532\n",
+      "[230]\teval-rmse:0.320243\n",
+      "[240]\teval-rmse:0.320344\n",
+      "[250]\teval-rmse:0.320179\n",
+      "[260]\teval-rmse:0.320107\n",
+      "[270]\teval-rmse:0.320093\n",
+      "[280]\teval-rmse:0.320061\n",
+      "[290]\teval-rmse:0.320252\n",
+      "[300]\teval-rmse:0.320291\n",
+      "[310]\teval-rmse:0.320471\n",
+      "[320]\teval-rmse:0.320517\n",
+      "Stopping. Best iteration:\n",
+      "[281]\teval-rmse:0.319991\n",
+      "\n",
+      "train_rmse = 0.257648786803 , val_rmse = 0.320517933831\n"
+     ]
+    }
+   ],
+   "source": [
+    "isLog1p=True\n",
+    "if (True):\n",
     "    train, test, macro = data_utils.load_data()\n",
     "\n",
     "    mult = .969\n",
@@ -137,76 +331,6 @@
     "        train_rmse = mean_squared_error(np.log1p(ylog_train), np.log1p(bst.predict(dtrain)))\n",
     "        val_rmse = mean_squared_error(np.log1p(ylog_val), np.log1p(bst.predict(dval)))\n",
     "    print 'train_rmse =', np.sqrt(train_rmse), ', val_rmse =', np.sqrt(val_rmse)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "conbined_data: (36650, 702)\n",
-      "submit test size: 0.264316268801\n",
-      "validate size: 0.359279752415\n",
-      "('X_train_all shape is', (28988, 702))\n",
-      "('X_train shape is', (21326, 702))\n",
-      "('y_train shape is', (21326,))\n",
-      "('X_val shape is', (7662, 702))\n",
-      "('y_val shape is', (7662,))\n",
-      "('X_test shape is', (7662, 702))\n",
-      "[0]\teval-rmse:14.401\n",
-      "Will train until eval-rmse hasn't improved in 40 rounds.\n",
-      "[10]\teval-rmse:8.62748\n",
-      "[20]\teval-rmse:5.17376\n",
-      "[30]\teval-rmse:3.11093\n",
-      "[40]\teval-rmse:1.88354\n",
-      "[50]\teval-rmse:1.1597\n",
-      "[60]\teval-rmse:0.744146\n",
-      "[70]\teval-rmse:0.517844\n",
-      "[80]\teval-rmse:0.406038\n",
-      "[90]\teval-rmse:0.356851\n",
-      "[100]\teval-rmse:0.336461\n",
-      "[110]\teval-rmse:0.328658\n",
-      "[120]\teval-rmse:0.325175\n",
-      "[130]\teval-rmse:0.323587\n",
-      "[140]\teval-rmse:0.322657\n",
-      "[150]\teval-rmse:0.322152\n",
-      "[160]\teval-rmse:0.321778\n",
-      "[170]\teval-rmse:0.32146\n",
-      "[180]\teval-rmse:0.321216\n",
-      "[190]\teval-rmse:0.320811\n",
-      "[200]\teval-rmse:0.320791\n",
-      "[210]\teval-rmse:0.320634\n",
-      "[220]\teval-rmse:0.320532\n",
-      "[230]\teval-rmse:0.320243\n",
-      "[240]\teval-rmse:0.320344\n",
-      "[250]\teval-rmse:0.320179\n",
-      "[260]\teval-rmse:0.320107\n",
-      "[270]\teval-rmse:0.320093\n",
-      "[280]\teval-rmse:0.320061\n",
-      "[290]\teval-rmse:0.320252\n",
-      "[300]\teval-rmse:0.320291\n",
-      "[310]\teval-rmse:0.320471\n",
-      "[320]\teval-rmse:0.320517\n",
-      "Stopping. Best iteration:\n",
-      "[281]\teval-rmse:0.319991\n",
-      "\n",
-      "train_rmse = 0.257648786803 , val_rmse = 0.320517933831\n"
-     ]
-    }
-   ],
-   "source": [
-    "CV(True)\n",
-    "#not log1p, original train_rmse = 0.252746403304 , val_rmse = 0.320226748185\n",
-    "#log1p, orginal train_rmse = 0.257648786803 , val_rmse = 0.320517933831, \n",
-    "\n",
-    "#log1p, my deleted train_rmse = 0.257648786803 , val_rmse = 0.320517933831, \n",
-    "#log1p, my deleted added train_rmse = 0.257648786803 , val_rmse = 0.320517933831"
    ]
   },
   {
