--- a/ML/model/Stacking.ipynb
+++ b/ML/model/Stacking.ipynb
@@ -224,7 +224,7 @@
     "        XGBRegressor(seed=5, learning_rate=.05, subsample=.7, max_depth=5, #min_child_weight=3, \n",
     "            #n_estimators=250, \n",
     "            colsample_bytree=0.7\n",
-    "        ), #0.31625\n",
+    "                    ), #0.31625\n",
     "        LassoCV(alphas = [1, 0.1, 0.001, 0.0005]),\n",
     "        KNeighborsRegressor(n_neighbors = 5),\n",
     "        KNeighborsRegressor(n_neighbors = 10),\n",
@@ -297,7 +297,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -311,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
