--- a/ML/model/Stacking.ipynb
+++ b/ML/model/Stacking.ipynb
@@ -70,49 +70,49 @@
     "    print ('Creating submission: ', sub_file)\n",
     "    pd.DataFrame({'id': pd.read_csv('../../input/test.csv').id, 'price_doc': prediction}).to_csv(sub_file, index=False)\n",
     "\n",
-    "# train need to be test when do test prediction\n",
-    "def data_preprocess(X_train,X_test):\n",
-    "#     outlier_idx = [4,11,13,20,46,66,70,167,178,185,199, 224,261, 309,313,318, 349,412,423,440,454,477,478, 523,540, 581,588,595,654,688, 691, 774, 798, 875, 898,926,970,987,1027,1109, 1169,1182,1239, 1256,1298,1324,1353,1359,1405,1442,1447]\n",
-    "#     train.drop(train.index[outlier_idx],inplace=True)\n",
-    "    all_data = pd.concat((X_train,X_test))\n",
+    "# # train need to be test when do test prediction\n",
+    "# def data_preprocess(X_train,X_test):\n",
+    "# #     outlier_idx = [4,11,13,20,46,66,70,167,178,185,199, 224,261, 309,313,318, 349,412,423,440,454,477,478, 523,540, 581,588,595,654,688, 691, 774, 798, 875, 898,926,970,987,1027,1109, 1169,1182,1239, 1256,1298,1324,1353,1359,1405,1442,1447]\n",
+    "# #     train.drop(train.index[outlier_idx],inplace=True)\n",
+    "#     all_data = pd.concat((X_train,X_test))\n",
     "    \n",
-    "#     lowerClipCol = ['floor_from_top', 'roomsize', 'extra_area', 'age_at_sale']\n",
-    "#     for c in lowerClipCol:\n",
-    "#         all_data[[c]]=all_data[[c]].clip(lower=0)\n",
+    "# #     lowerClipCol = ['floor_from_top', 'roomsize', 'extra_area', 'age_at_sale']\n",
+    "# #     for c in lowerClipCol:\n",
+    "# #         all_data[[c]]=all_data[[c]].clip(lower=0)\n",
     "    \n",
-    "# # #     to_delete = ['Alley','FireplaceQu','PoolQC','Fence','MiscFeature']\n",
-    "# # #     all_data = all_data.drop(to_delete,axis=1)\n",
+    "# # # #     to_delete = ['Alley','FireplaceQu','PoolQC','Fence','MiscFeature']\n",
+    "# # # #     all_data = all_data.drop(to_delete,axis=1)\n",
     "\n",
-    "# #     #train[\"SalePrice\"] = np.log1p(train[\"SalePrice\"])\n",
-    "# #     #log transform skewed numeric features\n",
-    "#     numeric_feats = all_data.dtypes[all_data.dtypes != \"object\"].index\n",
-    "#     skewed_feats = X_train[numeric_feats].apply(lambda x: skew(x.dropna())) #compute skewness\n",
-    "#     skewed_feats = skewed_feats[skewed_feats > 0.75]\n",
-    "#     skewed_feats = skewed_feats.index\n",
-    "#     all_data[skewed_feats] = np.log1p(all_data[skewed_feats])\n",
-    "#     #all_data = pd.get_dummies(all_data)\n",
-    "    #all_data = all_data.fillna(all_data.median())\n",
+    "# # #     #train[\"SalePrice\"] = np.log1p(train[\"SalePrice\"])\n",
+    "# # #     #log transform skewed numeric features\n",
+    "# #     numeric_feats = all_data.dtypes[all_data.dtypes != \"object\"].index\n",
+    "# #     skewed_feats = X_train[numeric_feats].apply(lambda x: skew(x.dropna())) #compute skewness\n",
+    "# #     skewed_feats = skewed_feats[skewed_feats > 0.75]\n",
+    "# #     skewed_feats = skewed_feats.index\n",
+    "# #     all_data[skewed_feats] = np.log1p(all_data[skewed_feats])\n",
+    "# #     #all_data = pd.get_dummies(all_data)\n",
+    "#     #all_data = all_data.fillna(all_data.median())\n",
     "    \n",
-    "    all_data.replace([np.infty, -np.infty], np.nan)\n",
-    "    imp = Imputer(missing_values=np.nan, strategy='median')\n",
-    "    all_data=pd.DataFrame(imp.fit_transform(all_data), columns=all_data.columns)\n",
-    "    imp = Imputer(missing_values=np.infty, strategy='median')\n",
-    "    all_data=pd.DataFrame(imp.fit_transform(all_data), columns=all_data.columns)\n",
-    "\n",
-    "    X_train = all_data[:X_train.shape[0]]\n",
-    "    X_test = all_data[X_train.shape[0]:]\n",
-    "    \n",
+    "#     all_data.replace([np.infty, -np.infty], np.nan)\n",
     "#     imp = Imputer(missing_values=np.nan, strategy='median')\n",
-    "#     imp.fit(all_data)\n",
-    "#     X_train = pd.DataFrame(imp.transform(X_train),columns=X_train.columns)\n",
-    "#     X_test = pd.DataFrame(imp.transform(X_test),columns=X_test.columns)\n",
-    "    \n",
+    "#     all_data=pd.DataFrame(imp.fit_transform(all_data), columns=all_data.columns)\n",
     "#     imp = Imputer(missing_values=np.infty, strategy='median')\n",
-    "#     imp.fit(pd.concat([X_train,X_test]))\n",
-    "#     X_train = pd.DataFrame(imp.transform(X_train),columns=X_train.columns)\n",
-    "#     X_test = pd.DataFrame(imp.transform(X_test),columns=X_test.columns)\n",
+    "#     all_data=pd.DataFrame(imp.fit_transform(all_data), columns=all_data.columns)\n",
     "\n",
-    "    return X_train,X_test\n"
+    "#     X_train = all_data[:X_train.shape[0]]\n",
+    "#     X_test = all_data[X_train.shape[0]:]\n",
+    "    \n",
+    "# #     imp = Imputer(missing_values=np.nan, strategy='median')\n",
+    "# #     imp.fit(all_data)\n",
+    "# #     X_train = pd.DataFrame(imp.transform(X_train),columns=X_train.columns)\n",
+    "# #     X_test = pd.DataFrame(imp.transform(X_test),columns=X_test.columns)\n",
+    "    \n",
+    "# #     imp = Imputer(missing_values=np.infty, strategy='median')\n",
+    "# #     imp.fit(pd.concat([X_train,X_test]))\n",
+    "# #     X_train = pd.DataFrame(imp.transform(X_train),columns=X_train.columns)\n",
+    "# #     X_test = pd.DataFrame(imp.transform(X_test),columns=X_test.columns)\n",
+    "\n",
+    "#     return X_train,X_test\n"
    ]
   },
   {
