--- a/ML/model/FurtherModels.ipynb
+++ b/ML/model/FurtherModels.ipynb
@@ -100,7 +100,8 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
